force-apps/deploy/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>DCOrder</label>
    <nameField>
        <displayFormat>ORDER-{0000}</displayFormat>
        <label>Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>