force-apps/deploy/main/default/objects/Order__c/fields/GrandTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>GrandTotalAmount__c</fullName>
    <label>GrandTotalAmount</label>
    <summarizedField>OrderItem__c.LineTotal__c</summarizedField>
    <summaryForeignKey>OrderItem__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>