force-apps/deploy/main/default/objects/Order__c/fields/IsTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>IsTaxExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTaxExempt</label>
    <type>Checkbox</type>
</CustomField>