force-apps/deploy/main/default/objects/Order__c/fields/OrderCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderCreatedDate__c</fullName>
    <label>OrderCreatedDate</label>
    <type>DateTime</type>
</CustomField>