force-apps/deploy/main/default/objects/Order__c/fields/SoldToCustomer__c.field-meta.xml
<CustomField>
    <fullName>SoldToCustomer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SoldToCustomer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>dcOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>