force-apps/deploy/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SoldToCustomer__c</columns>
    <columns>PromiseDate__c</columns>
    <columns>OrderCreatedDate__c</columns>
    <columns>IsTaxExempt__c</columns>
    <columns>GrandTotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>