force-apps/deploy/main/default/objects/Order__c/listViews/ETOrchestrateDC.listView-meta.xml
<ListView>
    <fullName>ETOrchestrateDC</fullName>
    <columns>NAME</columns>
    <columns>SoldToCustomer__c</columns>
    <columns>PromiseDate__c</columns>
    <columns>OrderCreatedDate__c</columns>
    <columns>GrandTotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>ETOrchestrateDC</label>
</ListView>